<resources>
    <string name="app_name">countryweather</string>
    <string name="search_for_countries">Search for Countries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="population">Population</string>
    <string name="name">Name</string>
    <string name="country_flag">country flag</string>
    <string name="country_details">Country Details</string>
    <string name="weather">Weather</string>
    <string name="date">Date</string>
    <string name="tempreature_min_max">Temperature min-max</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="country_flag2">country flag</string>
    <string name="name2">name</string>
    <string name="population2">population</string>
</resources>