<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical">



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date"
            style="@style/Theme.Material3.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_baseline_calendar_today_24"
            android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
            android:drawablePadding="10dp"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/tempreature_min_max">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/count_population"
            style="@style/Theme.Material3.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_baseline_wb_sunny_24"
            android:drawableLeft="@drawable/ic_baseline_wb_sunny_24"
            android:drawablePadding="10dp"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/humidity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/count_region"
            style="@style/Theme.Material3.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_baseline_cloud_queue_24"
            android:drawableLeft="@drawable/ic_baseline_cloud_queue_24"
            android:drawablePadding="10dp"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/pressure">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/count_capital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_baseline_cloud_queue_24"
            android:drawableLeft="@drawable/ic_baseline_cloud_queue_24"
            android:drawablePadding="10dp"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>